Fix issue with padding

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="shortcut icon" type="image/png" href="favicon_io/favicon.ico"/>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <style>
+  body {
+   margin: 0;
+   }
+  </style>
 
   <body>
      <ul>
      	<center>
-        <h2>Michael Lavva</h2>
-      </center>
+        <h2> Michael Lavva </h2>
+        </center>
      </ul>
      <div style="margin-top:80px;">
         <center>
