--- a/index.html
+++ b/index.html
@@ -67,6 +67,45 @@
               </div>
            </div>
        	</a>
+       	<h3>Coursework</h3>
+            <div class="card">
+                <div class="container">
+                  <p align="left"><b>Computer Science Coursework</b></p>
+
+                  <p align="left"><u>Upper Division:</u></p>
+                  <p align="left"><a href="https://cs170.org">CS170 - Efficient Algorithms and Intractable Problems - <i>Spring 2019</i></a></p>
+                  <p align="left"><a href="https://cs186berkeley.net">CSW186 - Introduction to Database Systems - <i>Spring 2019</i></a></p>
+                  <p align="left"><a href="https://cs161.org">CS161 - Computer Security - <i>Spring 2019</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs188/">CS188 - Introduction to Artificial Intelligence - <i>Fall 2018</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs195/">CS195 - Social Implications of Computer Technology - <i>Spring 2019</i></a></p>
+                  <p align="left">CS197 - Field Study - <i>Spring 2020</i></a></p>
+
+                  <p align="left"><u>Lower Division:</u></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61a/">CS61A - Structure and Interpretation of Computer Programs - <i>Spring 2017</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61b/">CS61B - Data Structures - <i>Fall 2017</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61c/">CS61C - Great Ideas in Computer Architecture (Machine Structures) - <i>Fall 2018</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs70/">CS70 - Efficient Algorithms and Intractable Problems - <i>Spring 2018</i></a></p>
+                  <p align="left"><a href="https://www.eecs16a.org">EE16A - Designing Information Devices and Systems I - <i>Spring 2018</i></a></p>
+                  <p align="left"><a href="https://math.berkeley.edu/~nadler/54fall2017.html">Math 54 - Linear Algebra and Differential Equations - <i>Fall 2017</i></a></p>
+
+                  <p align="left"><u>High School:</u></p>
+                  <p align="left">CS Capstone Project - <i>Senior Year</i></p>
+                  <p align="left">AP Computer Science - <i>Junior Year</i></p>
+                </div>
+           </div>
+           <div class="card">
+                <div class="container">
+                  <p align="left"><b>Data Science Coursework</b></p>
+
+                  <p align="left"><u>Upper Division:</u></p>
+                  <p align="left"><a href="http://people.ischool.berkeley.edu/~dbamman/nlp18.html"> 
+                  Info 159 - Natural Language Processing - <i>Fall 2018</i></a></p>
+                  <p align="left"><a href="http://www.ds100.org"> Data 100 - Principles and Techniques of Data Science - <i>Fall 2018</i></a></p>
+                  
+                  <p align="left"><u>Lower Division:</u></p>
+                  <p align="left"><a href="http://data8.org">Data 8 - The Foundations of Data Science - <i>Spring 2017</i></a></p>
+                </div>
+           </div>
        	<h3>Interests</h3>
             <div class="card">
                 <div class="container">
