fixes to coursework section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61a/">CS61A - Structure and Interpretation of Computer Programs - <i>Spring 2017</i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61b/">CS61B - Data Structures - <i>Fall 2017</i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61c/">CS61C - Great Ideas in Computer Architecture (Machine Structures) - <i>Fall 2018</i></a></p>
-                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs70/">CS70 - Efficient Algorithms and Intractable Problems - <i>Spring 2018</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs70/">CS70 - Discrete Mathematics and Probability Theory - <i>Spring 2018</i></a></p>
                   <p align="left"><a href="https://www.eecs16a.org">EE16A - Designing Information Devices and Systems I - <i>Spring 2018</i></a></p>
                   <p align="left"><a href="https://math.berkeley.edu/~nadler/54fall2017.html">Math 54 - Linear Algebra and Differential Equations - <i>Fall 2017</i></a></p>
 
@@ -93,6 +93,7 @@
                   <p align="left">AP Computer Science - <i>Junior Year</i></p>
                 </div>
            </div>
+           <br></br>
            <div class="card">
                 <div class="container">
                   <p align="left"><b>Data Science Coursework</b></p>
