Added additional info

--- a/index.html
+++ b/index.html
@@ -48,11 +48,23 @@
            </div>
            </a>
            <h3>Experience</h3>
+           <a href="https://www.eecs.berkeley.edu">
+              <div class="card">
+                 <div class="container">
+                    <p align="left"><b>UC Berkeley Electrical Engineering & Computer Sciences (EECS)</b><img src="images/eecs.png" align="right" height="50" width="50" alt="EECS"></p>
+                    <p align="left">CS61B Academic Intern</p>
+                    <p align="left">Provide guidance and answer questions for students in lab section</p>
+                    <p align="left"><i>Berkeley, CA &#183; January 2020 - Present</i></p>
+                 </div>
+              </div>
+           </a>
+           <br></br>
            <a href="https://www.livongo.com">
               <div class="card">
                  <div class="container">
                     <p align="left"><b>Livongo Health</b><img src="images/livongohealth.png" align="right" height="50" width="50" alt="Livongo Health"></p>
                     <p align="left">Backend Engineer Intern</p>
+                    <p align="left">Enterprise Integrations</p>
                     <p align="left"><i>Mountain View, CA &#183; June 2019 - December 2019</i></p>
                  </div>
               </div>
@@ -63,6 +75,7 @@
               <div class="container">
                  <p align="left"><b>SAP Labs</b><img src="images/saplabs.png" align="right" height="50" width="50" alt="SAP Labs"></p>
                  <p align="left">Big Data Developer Intern</p>
+                 <p align="left">SAP iXp Internship Program, Enterprise Data Hub Team</p>
                  <p align="left"><i>Sunnyvale, CA &#183; June 2018 - August 2018</i></p>
               </div>
            </div>
@@ -70,7 +83,7 @@
        	<h3>Coursework</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left"><b>Computer Science Coursework</b></p>
+                  <p align="left"><b>Computer Science Classes</b></p>
 
                   <p align="left"><u>Upper Division:</u></p>
                   <p align="left"><a href="https://cs170.org">CS170 - Efficient Algorithms and Intractable Problems - <i>Spring 2019</i></a></p>
@@ -96,7 +109,7 @@
            <br></br>
            <div class="card">
                 <div class="container">
-                  <p align="left"><b>Data Science Coursework</b></p>
+                  <p align="left"><b>Data Science Classes</b></p>
 
                   <p align="left"><u>Upper Division:</u></p>
                   <p align="left"><a href="http://people.ischool.berkeley.edu/~dbamman/nlp18.html"> 
@@ -110,7 +123,7 @@
        	<h3>Interests</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left">Software Engineering, Big Data, Microservices, Data Science, Machine Learning, Cloud Computing</p>
+                  <p align="left">Software Engineering, Big Data, Natural Language Processing, Microservices, Backend Engineering, Data Science, Deep Learning, Cloud Computing</p>
                 </div>
            </div>
        	<br></br>
