--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
            <a href="https://www.eecs.berkeley.edu">
               <div class="card">
                  <div class="container">
-                    <p align="left"><b>UC Berkeley Electrical Engineering & Computer Sciences (EECS)</b><img src="images/eecs.png" align="right" height="50" width="50" alt="EECS"></p>
+                    <p align="left"><b>UC Berkeley Electrical Engineering & Computer Sciences</b><img src="images/eecs.png" align="right" height="50" width="50" alt="EECS"></p>
                     <p align="left">CS61B Academic Intern</p>
                     <p align="left">Provide guidance and answer questions for students in lab section</p>
                     <p align="left"><i>Berkeley, CA &#183; January 2020 - Present</i></p>
