--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="shortcut icon" type="image/png" href="favicon_io/favicon.ico"/>
+  <link rel="shortcut icon" type="image/png" href="favicon/favicon.ico"/>
   <link rel="stylesheet" type="text/css" href="style.css">
   <style>
   body {
