--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
            <a href="https://www.linkedin.com/in/mlavva" class="fa fa-linkedin"></a>
            <a href="https://www.github.com/mlavva" class="fa fa-github"></a>
            <a href="https://www.facebook.com/mlavva" class="fa fa-facebook"></a>
+           <h3>Background</h3>
+           <div class="card">
+                 <div class="container">
+           			<p>CS Student at UC Berkeley. Passionate about technology, development, and innovation. </p>
+                 </div>
+              </div>
            <h3>Education</h3>
            <a href="https://www.berkeley.edu">
               <div class="card">
