Added awards section

--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
                   <p align="left"><a href="http://data8.org">Data 8 - The Foundations of Data Science - <i>Spring 2017</i></a></p>
                 </div>
            </div>
+        <h3>Awards</h3>
+            <div class="card">
+                <div class="container">
+                  <p align="left"><a href="https://ls.berkeley.edu/advising/academic-progress/graduation/honors"> Dean's Honors List - <i>Jan 2017 </i></a></p>
+                  <p align="left"><a href="https://apstudents.collegeboard.org/awards-recognitions/ap-scholar-award"> National App Scholar Award - <i> May 2016 </i></a></p>
+                  <p align="left"><a href="https://www.nationalmerit.org/s/1758/start.aspx?sid=1758&gid=2"> National Merit Finalist - <i> January 2016 </i></a></p>
+                </div>
+           </div>
        	<h3>Interests</h3>
             <div class="card">
                 <div class="container">
