--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 
   <body>
      <ul>
-     	<center>
         <h2> Michael Lavva </h2>
-        </center>
      </ul>
      <div style="margin-top:80px;">
         <center>
@@ -31,7 +29,7 @@
            <h3>Background</h3>
            <div class="card">
                  <div class="container">
-           			<p>CS Student at UC Berkeley. Passionate about technology, development, and innovation. </p>
+           			<p align="left">CS Student at UC Berkeley. Passionate about technology, development, and innovation. </p>
                  </div>
               </div>
            <h3>Education</h3>
