--- a/index.html
+++ b/index.html
@@ -33,25 +33,6 @@
            			<p align="left">CS Student at UC Berkeley. Passionate about technology, development, and innovation. </p>
                  </div>
               </div>
-           <h3>Education</h3>
-           <a href="https://www.berkeley.edu">
-              <div class="card">
-                 <div class="container">
-                    <p align="left"><b>University of California, Berkeley</b><img src="images/ucberkeley.png" align="right" height="50" width="50" alt = "UC Berkeley"></p>
-                    <p align="left">Computer Science Major, Data Science Minor</p>
-                    <p align="left"><i>Berkeley, CA &#183; August 2016 - December 2020</i></p>
-                 </div>
-              </div>
-           </a>
-           <br></br>
-           <a href="https://www.paly.net">
-           <div class="card">
-              <div class="container">
-                 <p align="left"><b>Palo Alto High School</b><img src="images/paloaltohighschool.png" align="right" height="50" width="50" alt="Palo Alto High School"></p>
-                 <p align="left"><i>Palo Alto, CA &#183; August 2012 - June 2016</i></p>
-              </div>
-           </div>
-           </a>
            <h3>Experience</h3>
            <a href="https://www.eecs.berkeley.edu">
               <div class="card">
@@ -84,7 +65,35 @@
                  <p align="left"><i>Sunnyvale, CA &#183; June 2018 - August 2018</i></p>
               </div>
            </div>
-       	</a>
+       	   </a>
+       	   <br></br>
+           <div class="card">
+              <div class="container">
+                 <p align="left"><b>Additional Experiences</b></p>
+                 <p align="left"><a href="https://www.jiva.com"> Software Developer Intern - Jiva - <i>Palo Alto, CA &#183; June 2015 - December 2015</i></a></p>
+                 <p align="left"><a href="https://cosmos.uci.edu"> Student Researcher - COSMOS at UC Irvine - <i>Irvine, CA &#183; June 2013 - August 2013</i></a></p>
+              </div>
+           </div>
+       	   <br></br>
+       	<h3>Education</h3>
+           <a href="https://www.berkeley.edu">
+              <div class="card">
+                 <div class="container">
+                    <p align="left"><b>University of California, Berkeley</b><img src="images/ucberkeley.png" align="right" height="50" width="50" alt = "UC Berkeley"></p>
+                    <p align="left">Computer Science Major, Data Science Minor</p>
+                    <p align="left"><i>Berkeley, CA &#183; August 2016 - December 2020</i></p>
+                 </div>
+              </div>
+           </a>
+           <br></br>
+           <a href="https://www.paly.net">
+           <div class="card">
+              <div class="container">
+                 <p align="left"><b>Palo Alto High School</b><img src="images/paloaltohighschool.png" align="right" height="50" width="50" alt="Palo Alto High School"></p>
+                 <p align="left"><i>Palo Alto, CA &#183; August 2012 - June 2016</i></p>
+              </div>
+           </div>
+           </a>
        	<h3>Coursework</h3>
             <div class="card">
                 <div class="container">
