--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
        	   <br></br>
            <div class="card">
               <div class="container">
-                 <p align="left"><b>Additional Experiences</b></p>
+                 <p align="left"><b>Additional Experience</b></p>
                  <p align="left"><a href="https://www.jiva.com"> Software Developer Intern - Jiva - <i>Palo Alto, CA &#183; June 2015 - December 2015</i></a></p>
                  <p align="left"><a href="https://cosmos.uci.edu"> Student Researcher - COSMOS at UC Irvine - <i>Irvine, CA &#183; June 2013 - August 2013</i></a></p>
               </div>
