--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
        	<h3>Interests</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left">Software Engineering, Big Data, Natural Language Processing, Microservices, Backend Engineering, Data Science, Deep Learning, Cloud Computing</p>
+                  <p align="left">Software Engineering, Big Data, NLP, Microservices, Backend Engineering, Data Science, Deep Learning, Cloud Computing</p>
                 </div>
            </div>
        	<br></br>
