added additional section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href='https://cdn.jsdelivr.net/npm/devicons@1.8.0/css/devicons.min.css' rel='stylesheet'>
   <link rel="shortcut icon" type="image/png" href="favicon/favicon.ico"/>
   <link rel="stylesheet" type="text/css" href="style.css">
   <style>
@@ -139,6 +140,29 @@
                   <p align="left"><a href="https://ls.berkeley.edu/advising/academic-progress/graduation/honors"> Dean's Honors List - <i>Jan 2017 </i></a></p>
                   <p align="left"><a href="https://apstudents.collegeboard.org/awards-recognitions/ap-scholar-award"> National App Scholar Award - <i> May 2016 </i></a></p>
                   <p align="left"><a href="https://www.nationalmerit.org/s/1758/start.aspx?sid=1758&gid=2"> National Merit Finalist - <i> January 2016 </i></a></p>
+                </div>
+           </div>
+        <h3>Languages & Frameworks</h3>
+          <div class="card">
+                <div class="container">
+                  <p align="left"><b>Languages:</b></p>
+                  <p align="left">
+                  <a href="https://www.java.com/en/"><span class="devicons devicons-java" style="font-size:50px"></span></a>
+                  <a href="https://www.python.org"><span class="devicons devicons-python" style="font-size:50px"></span></a>
+                  <a href="https://www.scala-lang.org"><span class="devicons devicons-scala" style="font-size:50px"></span></a>
+                  <a href="https://golang.org"><span class="devicons devicons-go" style="font-size:50px"></span></a>
+                  <a href="https://www.mysql.com"><span class="devicons devicons-mysql" style="font-size:50px"></span></a>
+                  <a href="https://www.postgresql.org"><span class="devicons devicons-postgresql" style="font-size:50px"></span></a>
+                  </p>
+                  <p align="left"><b>Frameworks:</b></p>
+                  <p align="left">
+                  <a href="https://git-scm.com"><span class="devicons devicons-git" style="font-size:50px"></span></a>
+                  <a href="https://www.docker.com"><span class="devicons devicons-docker" style="font-size:50px"></span></a>
+                  <a href="https://aws.amazon.com"><span class="devicons devicons-aws" style="font-size:50px"></span></a>
+                  <a href="https://jenkins.io"><span class="devicons devicons-jenkins" style="font-size:50px"></span></a>
+                  </p>
+                  <p align="left">
+                  </p>
                 </div>
            </div>
        	<h3>Interests</h3>
