--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
                   <p align="left">Software Engineering, Big Data, NLP, Microservices, Backend Engineering, Data Science, Deep Learning, Cloud Computing</p>
                 </div>
            </div>
-       	<br></br>
+        <br></br>
+       	<p style="font-size: 12px; color:#999999;";>Last Updated: April 5, 2020</p>
      </center>
      </div>
   </body>
