--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
      </ul>
      <div style="margin-top:80px;">
         <center>
-           <a href="https://www.linkedin.com/in/mlavva" class="fa fa-linkedin"></a>
-           <a href="https://www.github.com/mlavva" class="fa fa-github"></a>
-           <a href="https://www.facebook.com/mlavva" class="fa fa-facebook"></a>
+           <a href="https://www.linkedin.com/in/mlavva" class="fa fa-linkedin" target="_blank"></a>
+           <a href="https://www.github.com/mlavva" class="fa fa-github" target="_blank"></a>
+           <a href="https://www.facebook.com/mlavva" class="fa fa-facebook" target="_blank"></a>
            <br></br>
            <h3>Background</h3>
            <div class="card">
@@ -35,7 +35,7 @@
                  </div>
               </div>
            <h3>Experience</h3>
-           <a href="https://www.eecs.berkeley.edu">
+           <a href="https://www.eecs.berkeley.edu" target="_blank">
               <div class="card">
                  <div class="container">
                     <p align="left"><b>UC Berkeley Electrical Engineering & Computer Sciences</b><img src="images/eecs.png" align="right" height="50" width="50" alt="EECS"></p>
@@ -46,7 +46,7 @@
               </div>
            </a>
            <br></br>
-           <a href="https://www.livongo.com">
+           <a href="https://www.livongo.com" target="_blank">
               <div class="card">
                  <div class="container">
                     <p align="left"><b>Livongo Health</b><img src="images/livongohealth.png" align="right" height="50" width="50" alt="Livongo Health"></p>
@@ -57,7 +57,7 @@
               </div>
            </a>
            <br></br>
-           <a href="https://www.sap.com">
+           <a href="https://www.sap.com" target="_blank">
            <div class="card">
               <div class="container">
                  <p align="left"><b>SAP Labs</b><img src="images/saplabs.png" align="right" height="50" width="50" alt="SAP Labs"></p>
@@ -71,12 +71,12 @@
            <div class="card">
               <div class="container">
                  <p align="left"><b>Additional Experience:</b></p>
-                 <p align="left"><a href="https://www.jiva.com"> Software Developer Intern - Jiva - <i>Palo Alto, CA &#183; June 2015 - December 2015</i></a></p>
-                 <p align="left"><a href="https://cosmos.uci.edu"> Student Researcher - COSMOS at UC Irvine - <i>Irvine, CA &#183; June 2013 - August 2013</i></a></p>
+                 <p align="left"><a href="https://www.jiva.com" target="_blank"> Software Developer Intern - Jiva - <i>Palo Alto, CA &#183; June 2015 - December 2015</i></a></p>
+                 <p align="left"><a href="https://cosmos.uci.edu" target="_blank"> Student Researcher - COSMOS at UC Irvine - <i>Irvine, CA &#183; June 2013 - August 2013</i></a></p>
               </div>
            </div>
        	<h3>Education</h3>
-           <a href="https://www.berkeley.edu">
+           <a href="https://www.berkeley.edu" target="_blank">
               <div class="card">
                  <div class="container">
                     <p align="left"><b>University of California, Berkeley</b><img src="images/ucberkeley.png" align="right" height="50" width="50" alt = "UC Berkeley"></p>
@@ -86,7 +86,7 @@
               </div>
            </a>
            <br></br>
-           <a href="https://www.paly.net">
+           <a href="https://www.paly.net" target="_blank">
            <div class="card">
               <div class="container">
                  <p align="left"><b>Palo Alto High School</b><img src="images/paloaltohighschool.png" align="right" height="50" width="50" alt="Palo Alto High School"></p>
@@ -100,19 +100,19 @@
                   <p align="left"><b>Computer Science Classes</b></p>
 
                   <p align="left"><u>Upper Division:</u></p>
-                  <p align="left"><a href="https://cs170.org">CS170 - Efficient Algorithms and Intractable Problems - <i>Spring 2019</i></a></p>
-                  <p align="left"><a href="https://cs186berkeley.net">CSW186 - Introduction to Database Systems - <i>Spring 2019</i></a></p>
-                  <p align="left"><a href="https://cs161.org">CS161 - Computer Security - <i>Spring 2019</i></a></p>
-                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs195/">CS195 - Social Implications of Computer Technology - <i>Spring 2019</i></a></p>
+                  <p align="left"><a href="https://cs170.org" target="_blank">CS170 - Efficient Algorithms and Intractable Problems - <i>Spring 2019</i></a></p>
+                  <p align="left"><a href="https://cs186berkeley.net" target="_blank">CSW186 - Introduction to Database Systems - <i>Spring 2019</i></a></p>
+                  <p align="left"><a href="https://cs161.org" target="_blank">CS161 - Computer Security - <i>Spring 2019</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs195/" target="_blank">CS195 - Social Implications of Computer Technology - <i>Spring 2019</i></a></p>
                   <p align="left">CS197 - Field Study - <i>Spring 2020</i></a></p>
 
                   <p align="left"><u>Lower Division:</u></p>
-                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61a/">CS61A - Structure and Interpretation of Computer Programs - <i>Spring 2017</i></a></p>
-                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61b/">CS61B - Data Structures - <i>Fall 2017</i></a></p>
-                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61c/">CS61C - Great Ideas in Computer Architecture (Machine Structures) - <i>Fall 2018</i></a></p>
-                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs70/">CS70 - Discrete Mathematics and Probability Theory - <i>Spring 2018</i></a></p>
-                  <p align="left"><a href="https://www.eecs16a.org">EE16A - Designing Information Devices and Systems I - <i>Spring 2018</i></a></p>
-                  <p align="left"><a href="https://math.berkeley.edu/~nadler/54fall2017.html">Math 54 - Linear Algebra and Differential Equations - <i>Fall 2017</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61a/" target="_blank">CS61A - Structure and Interpretation of Computer Programs - <i>Spring 2017</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61b/" target="_blank">CS61B - Data Structures - <i>Fall 2017</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61c/" target="_blank">CS61C - Great Ideas in Computer Architecture (Machine Structures) - <i>Fall 2018</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs70/" target="_blank">CS70 - Discrete Mathematics and Probability Theory - <i>Spring 2018</i></a></p>
+                  <p align="left"><a href="https://www.eecs16a.org" target="_blank">EE16A - Designing Information Devices and Systems I - <i>Spring 2018</i></a></p>
+                  <p align="left"><a href="https://math.berkeley.edu/~nadler/54fall2017.html" target="_blank">Math 54 - Linear Algebra and Differential Equations - <i>Fall 2017</i></a></p>
 
                   <p align="left"><u>High School:</u></p>
                   <p align="left">CS Capstone Project - <i>Senior Year</i></p>
@@ -125,21 +125,21 @@
                   <p align="left"><b>Data Science Classes</b></p>
 
                   <p align="left"><u>Upper Division:</u></p>
-                  <p align="left"><a href="http://people.ischool.berkeley.edu/~dbamman/nlp18.html"> 
+                  <p align="left"><a href="http://people.ischool.berkeley.edu/~dbamman/nlp18.html" target="_blank">
                   Info 159 - Natural Language Processing - <i>Fall 2018</i></a></p>
-                  <p align="left"><a href="http://www.ds100.org"> Data 100 - Principles and Techniques of Data Science - <i>Fall 2018</i></a></p>
-                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs188/">CS188 - Introduction to Artificial Intelligence - <i>Fall 2018</i></a></p>
+                  <p align="left"><a href="http://www.ds100.org" target="_blank"> Data 100 - Principles and Techniques of Data Science - <i>Fall 2018</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs188/" target="_blank">CS188 - Introduction to Artificial Intelligence - <i>Fall 2018</i></a></p>
                   
                   <p align="left"><u>Lower Division:</u></p>
-                  <p align="left"><a href="http://data8.org">Data 8 - The Foundations of Data Science - <i>Spring 2017</i></a></p>
+                  <p align="left"><a href="http://data8.org" target="_blank">Data 8 - The Foundations of Data Science - <i>Spring 2017</i></a></p>
                 </div>
            </div>
         <h3>Awards</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left"><a href="https://ls.berkeley.edu/advising/academic-progress/graduation/honors"> Dean's Honors List - <i>Jan 2017 </i></a></p>
-                  <p align="left"><a href="https://apstudents.collegeboard.org/awards-recognitions/ap-scholar-award"> National App Scholar Award - <i> May 2016 </i></a></p>
-                  <p align="left"><a href="https://www.nationalmerit.org/s/1758/start.aspx?sid=1758&gid=2"> National Merit Finalist - <i> January 2016 </i></a></p>
+                  <p align="left"><a href="https://ls.berkeley.edu/advising/academic-progress/graduation/honors" target="_blank"> Dean's Honors List - <i>Jan 2017 </i></a></p>
+                  <p align="left"><a href="https://apstudents.collegeboard.org/awards-recognitions/ap-scholar-award" target="_blank"> National App Scholar Award - <i> May 2016 </i></a></p>
+                  <p align="left"><a href="https://www.nationalmerit.org/s/1758/start.aspx?sid=1758&gid=2" target="_blank"> National Merit Finalist - <i> January 2016 </i></a></p>
                 </div>
            </div>
         <h3>Languages & Frameworks</h3>
@@ -147,19 +147,19 @@
                 <div class="container">
                   <p align="left"><b>Languages:</b></p>
                   <p align="left">
-                  <a href="https://www.java.com/en/"><span class="devicons devicons-java" style="font-size:50px"></span></a>
-                  <a href="https://www.python.org"><span class="devicons devicons-python" style="font-size:50px"></span></a>
-                  <a href="https://www.scala-lang.org"><span class="devicons devicons-scala" style="font-size:50px"></span></a>
-                  <a href="https://golang.org"><span class="devicons devicons-go" style="font-size:50px"></span></a>
-                  <a href="https://www.mysql.com"><span class="devicons devicons-mysql" style="font-size:50px"></span></a>
-                  <a href="https://www.postgresql.org"><span class="devicons devicons-postgresql" style="font-size:50px"></span></a>
+                  <a href="https://www.java.com/en/" target="_blank"><span class="devicons devicons-java" style="font-size:50px"></span></a>
+                  <a href="https://www.python.org" target="_blank"><span class="devicons devicons-python" style="font-size:50px"></span></a>
+                  <a href="https://www.scala-lang.org" target="_blank"><span class="devicons devicons-scala" style="font-size:50px"></span></a>
+                  <a href="https://golang.org" target="_blank"><span class="devicons devicons-go" style="font-size:50px"></span></a>
+                  <a href="https://www.mysql.com" target="_blank"><span class="devicons devicons-mysql" style="font-size:50px"></span></a>
+                  <a href="https://www.postgresql.org" target="_blank"><span class="devicons devicons-postgresql" style="font-size:50px"></span></a>
                   </p>
                   <p align="left"><b>Frameworks:</b></p>
                   <p align="left">
-                  <a href="https://git-scm.com"><span class="devicons devicons-git" style="font-size:50px"></span></a>
-                  <a href="https://www.docker.com"><span class="devicons devicons-docker" style="font-size:50px"></span></a>
-                  <a href="https://aws.amazon.com"><span class="devicons devicons-aws" style="font-size:50px"></span></a>
-                  <a href="https://jenkins.io"><span class="devicons devicons-jenkins" style="font-size:50px"></span></a>
+                  <a href="https://git-scm.com" target="_blank"><span class="devicons devicons-git" style="font-size:50px"></span></a>
+                  <a href="https://www.docker.com" target="_blank"><span class="devicons devicons-docker" style="font-size:50px"></span></a>
+                  <a href="https://aws.amazon.com" target="_blank"><span class="devicons devicons-aws" style="font-size:50px"></span></a>
+                  <a href="https://jenkins.io" target="_blank"><span class="devicons devicons-jenkins" style="font-size:50px"></span></a>
                   </p>
                   <p align="left">
                   </p>
@@ -172,9 +172,8 @@
                 </div>
            </div>
         <br></br>
-       	<p style="font-size: 12px; color:#999999;";>Last Updated: April 5, 2020</p>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: April 17, 2020</p></a>
      </center>
      </div>
   </body>
 </html>
-
