--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="google-site-verification" content="dXOiFdcA_HFz6V7xCOun-9rR0josnd3X_4Aiara3Wi8"/>
+    <meta name="description" content="Homepage">
+    <meta name="author" content="Michael Lavva">
     <title>Michael Lavva</title>
   </head>
 
