--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Michael Lavva</title>
   </head>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href='https://cdn.jsdelivr.net/npm/devicons@1.8.0/css/devicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href='https://cdn.jsdelivr.net/npm/devicons@1.8.0/css/devicons.min.css' rel='stylesheet' integrity="sha384-ZBow9gVjfYN8o6EhAdFcsevnqOsYJ8qWg2lbttyCwMsvhY2gKztWnZ1ru7NM/lM6" crossorigin="anonymous">
   <link rel="shortcut icon" type="image/png" href="favicon/favicon.ico"/>
   <link rel="stylesheet" type="text/css" href="style.css">
   <style>
