--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <body>
      <ul>
-        <h2> Michael Lavva </h2>
+        <a href="#top"><h2>Michael Lavva</h2></a>
      </ul>
      <div style="margin-top:80px;">
         <center>
