--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="dXOiFdcA_HFz6V7xCOun-9rR0josnd3X_4Aiara3Wi8"/>
     <meta name="description" content="Homepage">
+    <meta name="keywords" content="UC, Berkeley, CS, EECS, Computer, Science, Michael, Lavva, Homepage, Microservices, NLP, Backend, Data, Software, Engineering">
     <meta name="author" content="Michael Lavva">
     <title>Michael Lavva</title>
   </head>
