--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p align="left"><b>UC Berkeley Electrical Engineering & Computer Sciences</b><img src="images/eecs.png" align="right" height="50" width="50" alt="EECS"></p>
                     <p align="left">CS61B Academic Intern</p>
                     <p align="left">Provide guidance and answer questions for students in lab section</p>
-                    <p align="left"><i>Berkeley, CA &#183; January 2020 - Present</i></p>
+                    <p align="left"><i>Berkeley, CA &#183; January 2020 - May 2020</i></p>
                  </div>
               </div>
            </a>
@@ -152,8 +152,8 @@
                   <a href="https://www.java.com/en/" target="_blank"><span class="devicons devicons-java" style="font-size:50px"></span></a>
                   <a href="https://www.python.org" target="_blank"><span class="devicons devicons-python" style="font-size:50px"></span></a>
                   <a href="https://www.scala-lang.org" target="_blank"><span class="devicons devicons-scala" style="font-size:50px"></span></a>
+                  <a href="https://www.javascript.com" target="_blank"><span class="devicons devicons-javascript" style="font-size:50px"></span></a>
                   <a href="https://golang.org" target="_blank"><span class="devicons devicons-go" style="font-size:50px"></span></a>
-                  <a href="https://www.mysql.com" target="_blank"><span class="devicons devicons-mysql" style="font-size:50px"></span></a>
                   <a href="https://www.postgresql.org" target="_blank"><span class="devicons devicons-postgresql" style="font-size:50px"></span></a>
                   </p>
                   <p align="left"><b>Frameworks:</b></p>
@@ -161,6 +161,8 @@
                   <a href="https://git-scm.com" target="_blank"><span class="devicons devicons-git" style="font-size:50px"></span></a>
                   <a href="https://www.docker.com" target="_blank"><span class="devicons devicons-docker" style="font-size:50px"></span></a>
                   <a href="https://aws.amazon.com" target="_blank"><span class="devicons devicons-aws" style="font-size:50px"></span></a>
+                  <a href="https://cloud.google.com" target="_blank"><span class="devicons devicons-google-cloud-platform" style="font-size:50px"></span></a>
+                  <a href="https://reactjs.org" target="_blank"><span class="devicons devicons-react" style="font-size:50px"></span></a>
                   <a href="https://jenkins.io" target="_blank"><span class="devicons devicons-jenkins" style="font-size:50px"></span></a>
                   </p>
                   <p align="left">
@@ -174,7 +176,7 @@
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: April 19, 2020</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: May 1, 2020</p></a>
      </center>
      </div>
   </body>
