--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
                   <p align="left"><b>Robust and Generalizable Computer Vision Classification</b></p>
                   <p align="left"><i>Abstract:</i></p>
                   <p align="left">We created a robust computer vision classifier that performs well in a dataset that contains perturbations. To achieve this, we used various data augmentation and other deep learning model techniques, such as model ensembling, image denoising, adversarial training, and attention networks. These methods helped improve the robustness against both naturally perturbed and adversarial datasets. In addition, we created class action map visualizations for our models to help understand how the model makes its classification decisions. Through these techniques, we achieved a 71.1% Top 1 Accuracy and 90.0% Top 5 Accuracy on the Tiny-ImageNet classification challenge.</p>
+                  <p align="left"><i>Links:</i></p>
                   <p align="left"><a href="https://mlavva.github.io/pdfs/cs182_report_robust_and_generalizable_computer_vision_classification.pdf" target="_blank">
-                  Paper Link</a>, <a href="https://github.com/mlavva/yolo9000" target="_blank">
+                  Paper</a>, <a href="https://github.com/mlavva/yolo9000" target="_blank">
                   GitHub Repo</a></p>
                 </div>
            </div>
