--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                   <p align="left"><a href="https://cs170.org" target="_blank">CS170 - Efficient Algorithms and Intractable Problems - <i>Spring 2019</i></a></p>
                   <p align="left"><a href="https://cs186berkeley.net" target="_blank">CSW186 - Introduction to Database Systems - <i>Spring 2019</i></a></p>
                   <p align="left"><a href="https://cs161.org" target="_blank">CS161 - Computer Security - <i>Spring 2019</i></a></p>
+                  <p align="left"><a href="http://cs168.io" target="_blank">CS168 - Introduction to the Internet: Architecture and Protocols - <i>Spring 2020</i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs195/" target="_blank">CS195 - Social Implications of Computer Technology - <i>Spring 2019</i></a></p>
                   <p align="left">CS197 - Field Study - <i>Spring 2020</i></a></p>
 
@@ -127,9 +128,12 @@
                   <p align="left"><b>Data Science Classes</b></p>
 
                   <p align="left"><u>Upper Division:</u></p>
+                  <p align="left"><a href="https://bcourses.berkeley.edu/courses/1487769" target="_blank">
+                  CSW182 - Designing, Visualizing, and Understanding Deep Neural Networks - <i>Spring 2020</i></a></p>
                   <p align="left"><a href="http://people.ischool.berkeley.edu/~dbamman/nlp18.html" target="_blank">
                   Info 159 - Natural Language Processing - <i>Fall 2018</i></a></p>
                   <p align="left"><a href="http://www.ds100.org" target="_blank"> Data 100 - Principles and Techniques of Data Science - <i>Fall 2018</i></a></p>
+                  <p align="left"><a href="https://hce-sts.org" target="_blank"> Data 104 - Human Contexts and Ethics of Data - <i>Spring 2020</i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs188/" target="_blank">CS188 - Introduction to Artificial Intelligence - <i>Fall 2018</i></a></p>
                   
                   <p align="left"><u>Lower Division:</u></p>
