--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
                  </div>
               </div>
            <h3>Experience</h3>
+           <a href="https://www.salesforce.com">
+              <div class="card">
+                 <div class="container">
+                    <p align="left"><b>Salesforce</b><img src="images/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
+                    <p align="left">Software Engineering Intern</p>
+                    <p align="left"><i>San Francisco, CA &#183; June 2020 - Present</i></p>
+                 </div>
+              </div>
+           </a>
+           <br></br>
            <a href="https://www.eecs.berkeley.edu" target="_blank">
               <div class="card">
                  <div class="container">
@@ -193,7 +203,7 @@
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: May 20, 2020</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: May 29, 2020</p></a>
      </center>
      </div>
   </body>
