--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                  <div class="container">
                     <p align="left"><b>Salesforce</b><img src="images/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
                     <p align="left">Software Engineering Intern</p>
+                    <p align="left">Monitoring Cloud</p>
                     <p align="left"><i>San Francisco, CA &#183; June 2020 - Present</i></p>
                  </div>
               </div>
