--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p align="left"><b>Salesforce</b><img src="images/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
                     <p align="left">Software Engineering Intern</p>
                     <p align="left">Monitoring Cloud</p>
-                    <p align="left"><i>San Francisco, CA &#183; June 2020 - Present</i></p>
+                    <p align="left"><i>San Francisco, CA &#183; June 2020 - August 2020</i></p>
                  </div>
               </div>
            </a>
