--- a/index.html
+++ b/index.html
@@ -114,11 +114,12 @@
 
                   <p align="left"><u>Upper Division:</u></p>
                   <p align="left"><a href="https://cs170.org" target="_blank">CS170 - Efficient Algorithms and Intractable Problems - <i>Spring 2019</i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs164/" target="_blank">CS164 - Programming Languages and Compilers - <i>Fall 2020</i></a></p>
                   <p align="left"><a href="https://cs186berkeley.net" target="_blank">CSW186 - Introduction to Database Systems - <i>Spring 2019</i></a></p>
                   <p align="left"><a href="https://cs161.org" target="_blank">CS161 - Computer Security - <i>Spring 2019</i></a></p>
                   <p align="left"><a href="http://cs168.io" target="_blank">CS168 - Introduction to the Internet: Architecture and Protocols - <i>Spring 2020</i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs195/" target="_blank">CS195 - Social Implications of Computer Technology - <i>Spring 2019</i></a></p>
-                  <p align="left">CS197 - Field Study - <i>Spring 2020</i></a></p>
+                  <p align="left"><a href="https://www2.eecs.berkeley.edu/Courses/CS197/" target="_blank">CS197 - Field Study - <i>Spring 2020</i></a></p>
 
                   <p align="left"><u>Lower Division:</u></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61a/" target="_blank">CS61A - Structure and Interpretation of Computer Programs - <i>Spring 2017</i></a></p>
@@ -131,6 +132,8 @@
                   <p align="left"><u>High School:</u></p>
                   <p align="left">CS Capstone Project - <i>Senior Year</i></p>
                   <p align="left">AP Computer Science - <i>Junior Year</i></p>
+                  <p align="left">Advanced Java - <i>Sophomore Year</i></p>
+                  <p align="left">Intro to Java - <i>Freshman Year</i></p>
                 </div>
            </div>
            <br></br>
@@ -143,12 +146,14 @@
                   CSW182 - Designing, Visualizing, and Understanding Deep Neural Networks - <i>Spring 2020</i></a></p>
                   <p align="left"><a href="http://people.ischool.berkeley.edu/~dbamman/nlp18.html" target="_blank">
                   Info 159 - Natural Language Processing - <i>Fall 2018</i></a></p>
-                  <p align="left"><a href="http://www.ds100.org" target="_blank"> Data 100 - Principles and Techniques of Data Science - <i>Fall 2018</i></a></p>
-                  <p align="left"><a href="https://hce-sts.org" target="_blank"> Data 104 - Human Contexts and Ethics of Data - <i>Spring 2020</i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs188/" target="_blank">CS188 - Introduction to Artificial Intelligence - <i>Fall 2018</i></a></p>
+                  <p align="left"><a href="http://www.ds100.org" target="_blank"> Data 100 - Principles and Techniques of Data Science - <i>Fall 2018</i></a></p>
+                  <p align="left"><a href="http://c188.ced.berkeley.edu" target="_blank">Geog C188 - Geographic Information Science - <i>Fall 2020</i></a></p>
+                  <p align="left"><a href="https://hce-sts.org" target="_blank"> Data 104 - Human Contexts and Ethics of Data - <i>Spring 2020</i></a></p>
                   
                   <p align="left"><u>Lower Division:</u></p>
                   <p align="left"><a href="http://data8.org" target="_blank">Data 8 - The Foundations of Data Science - <i>Spring 2017</i></a></p>
+                  <p align="left"><a href="http://data8.org/connector/Time%20Series%20Analysis/" target="_blank">CivEng 88B - Time Series Analysis - <i>Spring 2017</i></a></p>
                 </div>
            </div>
         <h3>Papers</h3>
@@ -204,7 +209,7 @@
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: August 18, 2020</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: December 2020</p></a>
      </center>
      </div>
   </body>
