--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   body {
    margin: 0;
    }
+  .link { color: #0000EE; }
   </style>
 
   <body>
@@ -28,7 +29,7 @@
         <center>
            <a href="https://www.linkedin.com/in/mlavva" class="fa fa-linkedin" target="_blank"></a>
            <a href="https://www.github.com/mlavva" class="fa fa-github" target="_blank"></a>
-           <a href="https://www.facebook.com/mlavva" class="fa fa-facebook" target="_blank"></a>
+           <a href="https://cal.berkeley.edu/mlavva" class="fa fa-envelope" target="_blank"></a>
            <br></br>
            <h3>Background</h3>
            <div class="card">
@@ -164,8 +165,8 @@
                   <p align="left"><i>Abstract:</i></p>
                   <p align="left">We created a robust computer vision classifier that performs well in a dataset that contains perturbations. To achieve this, we used various data augmentation and other deep learning model techniques, such as model ensembling, image denoising, adversarial training, and attention networks. These methods helped improve the robustness against both naturally perturbed and adversarial datasets. In addition, we created class action map visualizations for our models to help understand how the model makes its classification decisions. Through these techniques, we achieved a 71.1% Top 1 Accuracy and 90.0% Top 5 Accuracy on the Tiny-ImageNet classification challenge.</p>
                   <p align="left"><i>Links:</i></p>
-                  <p align="left"><a href="https://mlavva.github.io/pdfs/cs182_report_robust_and_generalizable_computer_vision_classification.pdf" target="_blank">
-                  Paper</a>, <a href="https://github.com/mlavva/yolo9000" target="_blank">
+                  <p align="left"><a class="link" href="https://mlavva.github.io/pdfs/cs182_report_robust_and_generalizable_computer_vision_classification.pdf" target="_blank">
+                  Paper</a>, <a class="link" href="https://github.com/mlavva/yolo9000" target="_blank">
                   GitHub Repo</a></p>
                 </div>
            </div>
@@ -206,6 +207,12 @@
             <div class="card">
                 <div class="container">
                   <p align="left">Software Engineering, Big Data, NLP, Microservices, Backend Engineering, Data Science, Deep Learning, Cloud Computing</p>
+                </div>
+           </div>
+        <h3>Other Links</h3>
+            <div class="card">
+                <div class="container">
+                  <p align="left"><a class="link" href="https://www.facebook.com/mlavva" target="_blank">Facebook</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">AngelList</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
                 </div>
            </div>
         <br></br>
