--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
            <a href="https://www.salesforce.com">
               <div class="card">
                  <div class="container">
-                    <p align="left"><b>Salesforce</b><img src="images/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
+                    <p align="left"><b>Salesforce</b><img src="images/icons/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
                     <p align="left">Software Engineering Intern</p>
                     <p align="left">Monitoring Cloud</p>
                     <p align="left"><i>San Francisco, CA &#183; June 2020 - August 2020</i></p>
@@ -52,7 +52,7 @@
            <a href="https://www.eecs.berkeley.edu" target="_blank">
               <div class="card">
                  <div class="container">
-                    <p align="left"><b>UC Berkeley Electrical Engineering & Computer Sciences</b><img src="images/eecs.png" align="right" height="50" width="50" alt="EECS"></p>
+                    <p align="left"><b>UC Berkeley Electrical Engineering & Computer Sciences</b><img src="images/icons/eecs.png" align="right" height="50" width="50" alt="EECS"></p>
                     <p align="left">CS61B Academic Intern</p>
                     <p align="left">Provide guidance and answer questions for students in lab section</p>
                     <p align="left"><i>Berkeley, CA &#183; January 2020 - May 2020</i></p>
@@ -63,7 +63,7 @@
            <a href="https://www.livongo.com" target="_blank">
               <div class="card">
                  <div class="container">
-                    <p align="left"><b>Livongo Health</b><img src="images/livongohealth.png" align="right" height="50" width="50" alt="Livongo Health"></p>
+                    <p align="left"><b>Livongo Health</b><img src="images/icons/livongohealth.png" align="right" height="50" width="50" alt="Livongo Health"></p>
                     <p align="left">Backend Engineer Intern</p>
                     <p align="left">Enterprise Integrations</p>
                     <p align="left"><i>Mountain View, CA &#183; June 2019 - December 2019</i></p>
@@ -74,7 +74,7 @@
            <a href="https://www.sap.com" target="_blank">
            <div class="card">
               <div class="container">
-                 <p align="left"><b>SAP Labs</b><img src="images/saplabs.png" align="right" height="50" width="50" alt="SAP Labs"></p>
+                 <p align="left"><b>SAP Labs</b><img src="images/icons/saplabs.png" align="right" height="50" width="50" alt="SAP Labs"></p>
                  <p align="left">Big Data Developer Intern</p>
                  <p align="left">SAP iXp Internship Program, Enterprise Data Hub Team</p>
                  <p align="left"><i>Sunnyvale, CA &#183; June 2018 - August 2018</i></p>
@@ -93,7 +93,7 @@
            <a href="https://www.berkeley.edu" target="_blank">
               <div class="card">
                  <div class="container">
-                    <p align="left"><b>University of California, Berkeley</b><img src="images/ucberkeley.png" align="right" height="50" width="50" alt = "UC Berkeley"></p>
+                    <p align="left"><b>University of California, Berkeley</b><img src="images/icons/ucberkeley.png" align="right" height="50" width="50" alt = "UC Berkeley"></p>
                     <p align="left">Computer Science Major, Data Science Minor</p>
                     <p align="left"><i>Berkeley, CA &#183; August 2016 - December 2020</i></p>
                  </div>
@@ -103,7 +103,7 @@
            <a href="https://www.paly.net" target="_blank">
            <div class="card">
               <div class="container">
-                 <p align="left"><b>Palo Alto High School</b><img src="images/paloaltohighschool.png" align="right" height="50" width="50" alt="Palo Alto High School"></p>
+                 <p align="left"><b>Palo Alto High School</b><img src="images/icons/paloaltohighschool.png" align="right" height="50" width="50" alt="Palo Alto High School"></p>
                  <p align="left"><i>Palo Alto, CA &#183; August 2012 - June 2016</i></p>
               </div>
            </div>
@@ -160,7 +160,8 @@
         <h3>Papers</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left"><b>Robust and Generalizable Computer Vision Classification</b></p>
+                  <p align="left"><b>Robust and Generalizable Computer Vision Classification</b>
+                  <a class="link" href="https://github.com/mlavva/yolo9000" target="_blank"><img src="images/papers/cs182_figure.png" align="right" height="226" width="100" alt="CS182 Figure"></a> <a class="link" href="https://mlavva.github.io/pdfs/cs182_report_robust_and_generalizable_computer_vision_classification.pdf" target="_blank"><img src="images/papers/cs182_report_img.png" align="right" height="198" width="153" alt="CS182 Report"></a></p>
                   <p align="left">May 14, 2020</p>
                   <p align="left"><i>Abstract:</i></p>
                   <p align="left">We created a robust computer vision classifier that performs well in a dataset that contains perturbations. To achieve this, we used various data augmentation and other deep learning model techniques, such as model ensembling, image denoising, adversarial training, and attention networks. These methods helped improve the robustness against both naturally perturbed and adversarial datasets. In addition, we created class action map visualizations for our models to help understand how the model makes its classification decisions. Through these techniques, we achieved a 71.1% Top 1 Accuracy and 90.0% Top 5 Accuracy on the Tiny-ImageNet classification challenge.</p>
@@ -173,7 +174,8 @@
         <h3>Awards</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left"><a href="https://ls.berkeley.edu/advising/academic-progress/graduation/honors" target="_blank"> Dean's Honors List - <i>Jan 2017 </i></a></p>
+                  <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs164/fa20/tournament-results.html" target="_blank"> Compilers Tournament Award (Team29) - <i> Dec 2020 </i></a></p>
+                  <p align="left"><a href="https://ls.berkeley.edu/advising/academic-progress/graduation/honors" target="_blank"> Dean's Honors List - <i> Jan 2017 </i></a></p>
                   <p align="left"><a href="https://apstudents.collegeboard.org/awards-recognitions/ap-scholar-award" target="_blank"> National App Scholar Award - <i> May 2016 </i></a></p>
                   <p align="left"><a href="https://www.nationalmerit.org/s/1758/start.aspx?sid=1758&gid=2" target="_blank"> National Merit Finalist - <i> January 2016 </i></a></p>
                 </div>
