--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
            <h3>Background</h3>
            <div class="card">
                  <div class="container">
-           			<p align="left">CS Student at UC Berkeley. Passionate about technology, development, and innovation. </p>
+           			<p align="left">Passionate about technology, development, and innovation. Interested in software engineering, API development, data science, big data, natural language processing, and deep learning. </p>
                  </div>
               </div>
            <h3>Experience</h3>
