--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
                  </div>
               </div>
            <h3>Experience</h3>
-           <a href="https://www.salesforce.com" target="_blank">
+           <a href="https://www.salesforce.com">
               <div class="card">
                  <div class="container">
                     <p align="left"><b>Salesforce</b><img src="images/icons/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
+                    <p align="left">Incoming Associate Member of Technical Staff</p>
+                    <p align="left"><i>San Francisco, CA</i></p>
+                    <h3><p align="left">&#183;</p></h3>
                     <p align="left">Software Engineering Intern</p>
                     <p align="left">Monitoring Cloud</p>
                     <p align="left"><i>San Francisco, CA &#183; June 2020 - August 2020</i></p>
@@ -243,7 +246,7 @@
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: December 2020</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: January 2021</p></a>
      </center>
      </div>
   </body>
