--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                  <div class="container">
                     <p align="left"><b>Salesforce</b><img src="images/icons/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
                     <p align="left">Incoming Associate Member of Technical Staff</p>
-                    <p align="left"><i>San Francisco, CA</i></p>
+                    <p align="left"><i>San Francisco, CA &#183; January 2021 - Present</i></p>
                     <h3><p align="left">&#183;</p></h3>
                     <p align="left">Software Engineering Intern</p>
                     <p align="left">Monitoring Cloud</p>
@@ -89,7 +89,7 @@
               <div class="container">
                  <p align="left"><b>Additional Experience:</b></p>
                  <p align="left">Software Developer Intern - Jiva - <i>Palo Alto, CA &#183; June 2015 - December 2015</i></p>
-                 <p align="left">Student Researcher - COSMOS at UC Irvine - <i>Irvine, CA &#183; June 2013 - August 2013</i></p>
+                 <p align="left">Student Researcher - COSMOS Program at UC Irvine - <i>Irvine, CA &#183; June 2013 - August 2013</i></p>
               </div>
            </div>
        	<h3>Education</h3>
@@ -123,7 +123,7 @@
                   <p align="left"><a href="https://cs161.org" target="_blank">CS161 - Computer Security - <i>Spring 2019</i></a> <a class="link" href="projects.html" target="_blank">(Encrypted File Sharing System Project)</i></a></p>
                   <p align="left"><a href="http://cs168.io" target="_blank">CS168 - Introduction to the Internet: Architecture and Protocols - <i>Spring 2020</i></a> <a class="link" href="projects.html" target="_blank">(Network Routing Project)</i></a></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs195/" target="_blank">CS195 - Social Implications of Computer Technology - <i>Spring 2019</i></a></p>
-                  <p align="left"><a href="https://www2.eecs.berkeley.edu/Courses/CS197/" target="_blank">CS197 - Field Study - <i>Spring 2020</i></a></p>
+                  <p align="left"><a href="https://www2.eecs.berkeley.edu/Courses/CS197/" target="_blank">CS197 - Field Study (Academic Intern) - <i>Spring 2020</i></a></p>
 
                   <p align="left"><u>Lower Division:</u></p>
                   <p align="left"><a href="https://inst.eecs.berkeley.edu/~cs61a/" target="_blank">CS61A - Structure and Interpretation of Computer Programs - <i>Spring 2017</i></a> <a class="link" href="projects.html" target="_blank">(Yelp Maps Project, Scheme Interpreter Project)</i></a></p>
