--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <center>
            <a href="https://www.linkedin.com/in/mlavva" class="fa fa-linkedin" target="_blank"></a>
            <a href="https://www.github.com/mlavva" class="fa fa-github" target="_blank"></a>
-           <a href="https://cal.berkeley.edu/mlavva" class="fa fa-envelope" target="_blank"></a>
+           <a href="m&#97;&#105;&#108;&#116;&#111;&#x3A;&#109;&#108;&#97;&#118;&#118;&#97;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;u" class="fa fa-envelope" target="_blank"></a>
            <br></br>
            <h3>Background</h3>
            <div class="card">
@@ -242,7 +242,7 @@
         <h3>Other Links</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left"><a class="link" href="https://www.facebook.com/mlavva" target="_blank">Facebook</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">AngelList</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
+                  <p align="left"><a class="link" href="https://www.facebook.com/mlavva" target="_blank">Facebook</a>,  <a class="link" href="https://cal.berkeley.edu/mlavva" target="_blank">Cal Alumni</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">AngelList</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
                 </div>
            </div>
         <br></br>
