--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
               <div class="card">
                  <div class="container">
                     <p align="left"><b>Salesforce</b><img src="images/icons/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
-                    <p align="left">Incoming Associate Member of Technical Staff</p>
+                    <p align="left">Incoming Software Engineer</p>
+                    <p align="left">Associate Member of Technical Staff</p>
                     <p align="left"><i>San Francisco, CA &#183; January 2021 - Present</i></p>
                     <h3><p align="left">&#183;</p></h3>
                     <p align="left">Software Engineering Intern</p>
