--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <p align="left"><b>Salesforce</b><img src="images/icons/salesforce.png" align="right" height="50" width="50" alt="Salesforce"></p>
                     <p align="left">Software Engineer</p>
                     <p align="left">Associate Member of Technical Staff</p>
+                    <p align="left">Incident Management Tools</p>
                     <p align="left"><i>San Francisco, CA &#183; January 2021 - Present</i></p>
                     <h3><p align="left">&#183;</p></h3>
                     <p align="left">Software Engineering Intern</p>
@@ -67,7 +68,7 @@
            <a href="https://www.livongo.com" target="_blank">
               <div class="card">
                  <div class="container">
-                    <p align="left"><b>Livongo Health</b><img src="images/icons/livongohealth.png" align="right" height="50" width="50" alt="Livongo Health"></p>
+                    <p align="left"><b>Livongo Health (Acquired by Teladoc Health)</b><img src="images/icons/livongohealth.png" align="right" height="50" width="50" alt="Livongo Health"></p>
                     <p align="left">Backend Engineer Intern</p>
                     <p align="left">Enterprise Integrations</p>
                     <p align="left"><i>Mountain View, CA &#183; June 2019 - December 2019</i></p>
@@ -247,7 +248,7 @@
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: January 2021</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: January 2022</p></a>
      </center>
      </div>
   </body>
