--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p align="left"><i>San Francisco, CA &#183; January 2021 - Present</i></p>
                     <h3><p align="left">&#183;</p></h3>
                     <p align="left">Software Engineering Intern</p>
-                    <p align="left">Monitoring Cloud</p>
+                    <p align="left">Availability Insights & Reporting</p>
                     <p align="left"><i>San Francisco, CA &#183; June 2020 - August 2020</i></p>
                  </div>
               </div>
@@ -248,7 +248,7 @@
                 </div>
            </div>
         <br></br>
-       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: January 2022</p></a>
+       	<a href="https://github.com/mlavva/mlavva.github.io" target="_blank"><p style="font-size: 12px; color:#999999;";>Last Updated: February 2022</p></a>
      </center>
      </div>
   </body>
