--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <h3>Other Links</h3>
             <div class="card">
                 <div class="container">
-                  <p align="left"><a class="link" href="https://www.facebook.com/mlavva" target="_blank">Facebook</a>,  <a class="link" href="https://cal.berkeley.edu/mlavva" target="_blank">Cal Alumni</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">AngelList</a>, <a class="link" href="https://www.codecademy.com/profiles/mlavva" target="_blank">Codecademy</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
+                  <p align="left"><a class="link" href="https://cal.berkeley.edu/mlavva" target="_blank">Cal Alumni</a>, <a class="link" href="https://www.facebook.com/mlavva" target="_blank">Facebook</a>, <a class="link" href="https://angel.co/u/mlavva" target="_blank">AngelList</a>, <a class="link" href="https://www.codecademy.com/profiles/mlavva" target="_blank">Codecademy</a>, <a class="link" href="https://www.khanacademy.org/profile/mlavva" target="_blank">Khan Academy</a>, <a class="link" href="https://www.kaggle.com/dataclass" target="_blank">Kaggle</a></p>
                 </div>
            </div>
         <br></br>
